# blockchain-python-identity-service

./: .env  .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml  test_auth.py  test_auth_neon.py
app/: main.py
app/api/v1/: routes.py
app/api/v1/endpoints/: user_endpoints.py
app/core/: config.py  container.py  database.py  ecode.py
app/db/: session.py
app/dto/: base_response.py
app/dto/user/request/: get_user_request.py  login_request.py  register_request.py
app/dto/user/response/: get_user_response.py  login_response.py  register_response.py
app/model/: __init__.py  base_model.py  user_model.py
app/repository/: __init__.py  user_repository.py
app/service/: user_service.py
config/: config.dev.yaml
scripts/: test_db.py
